--- a/index.html
+++ b/index.html
@@ -13,21 +13,43 @@
         <!-- Sección del Menú  -->
         <div class="menu">
             <nav id="navbar" class="nav">
-                <ul class="menu__list">
-                    <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
-                    <li class="menu__list__item"><a href="#skills">Skills</a></li>
-                    <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
-                    <li class="menu__list__item"><a href="#formacion">Formación</a></li>
-                    <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                    <li class="menu__list__item"><a href="#contacto">frank.senju3@gmail.com</a></li>
+                <ul class="nav_list">
+                    <li class="nav_list_item"><a href="#sobre-mi">About</a></li>
+                    <li class="nav_list_item"><a href="#skills">Skills</a></li>
+                    <!--<li class="nav_list_item"><a href="#hobbies">Hobbies</a></li>-->
+                    <li class="nav_list_item"><a href="#formacion">Formación</a></li>
+                    <li class="nav_list_item"><a href="#xp">Proyectos</a></li>
+                    <li class="nav_list_item"><a href="#contacto">frank.senju3@gmail.com</a></li>
                 </ul>
-                <li class="menu__list__item__contato"><a href="#contacto">frank.senju3@gmail.com</a></li>    
+                <!--<li class="nav_list_item_contato"><a href="#contacto">frank.senju3@gmail.com</a></li>-->    
             </nav>
         </div>
     </header>
+    <!--Welcome Section-->
     <section class="welcome-section">
         <h1>Hola soy Pacuino</h1>
-        <p>Aqui haciendo bugs desde 2023</p>
+        <p>Front End Especialista</p>
+    </section>
+    <section class="projects-section">
+        <h2 class="projects-title">Aqui algunos de mis proyectos</h2>
+        <div class="projects-grid">
+            <a href="https://pacuino.github.io/encriptadorDeTexto-Alura/" class="project encriptador" target="_blank">
+                <img src="img/encriptador.png" alt="Encriptador de Texto" class="project-image"></a>
+            <a href="https://pacuino.github.io/AkiraToriyama/" class="project akiratoriyama">
+                <img src="img/akiratoriyama.png" alt="Akira Toriyama" class="project-image"></a>
+            <a href="https://pacuino.github.io/magazine-fCC/" class="project magazine">
+                <img src="img/magazine.png" alt="Magazine" class="project-image">
+            </a>
+            <a href="https://pacuino.github.io/aluraPlay-Alura/" class="project aluraplay">
+                <img src="img/aluraplaypic.png" alt="Alura Play" class="project-image">
+            </a>
+            <a href="https://pacuino.github.io/workCultureSurvey-fCC/" class="project survey">
+                <img src="img/survey3.png" alt="Work Culture Survey" class="project-image">
+            </a>
+            <a href="https://pacuino.github.io/techDoc-fCC/" class="project techdoc">
+                <img src="img/techdoc.png" alt="Technical Documentation" class="project-image">
+            </a>
+        </div>
     </section>
 </body>
 </html>
