--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <!--<li class="nav_list_item"><a href="#hobbies">Hobbies</a></li>-->
                     <li class="nav_list_item"><a href="#formacion">Formación</a></li>
                     <li class="nav_list_item"><a href="#xp">Proyectos</a></li>
-                    <li class="nav_list_item"><a href="#contacto">frank.senju3@gmail.com</a></li>
+                    <!--<li class="nav_list_item"><a href="#contacto">frank.senju3@gmail.com</a></li>-->
                 </ul>
                 <!--<li class="nav_list_item_contato"><a href="#contacto">frank.senju3@gmail.com</a></li>-->    
             </nav>
@@ -34,20 +34,52 @@
         <h2 class="projects-title">Aqui algunos de mis proyectos</h2>
         <div class="projects-grid">
             <a href="https://pacuino.github.io/encriptadorDeTexto-Alura/" class="project encriptador" target="_blank">
-                <img src="img/encriptador.png" alt="Encriptador de Texto" class="project-image"></a>
-            <a href="https://pacuino.github.io/AkiraToriyama/" class="project akiratoriyama">
-                <img src="img/akiratoriyama.png" alt="Akira Toriyama" class="project-image"></a>
-            <a href="https://pacuino.github.io/magazine-fCC/" class="project magazine">
-                <img src="img/magazine.png" alt="Magazine" class="project-image">
+                <img src="img/encriptador2.png" alt="Encriptador de Texto" class="project-image">
+                <p class="project-title">
+                    <span class="code">&lt</span>
+                    Encriptador de Texto
+                    <span class="code">/&gt</span>
+                </p>
             </a>
-            <a href="https://pacuino.github.io/aluraPlay-Alura/" class="project aluraplay">
-                <img src="img/aluraplaypic.png" alt="Alura Play" class="project-image">
+            <a href="https://pacuino.github.io/AkiraToriyama/" class="project akiratoriyama" target="_blank">
+                <img src="img/akiratoriyama2.png" alt="Akira Toriyama" class="project-image">
+                <p class="project-title">
+                    <span class="code">&lt</span>
+                    Akira Toriyama
+                    <span class="code">/&gt</span>
+                </p>
             </a>
-            <a href="https://pacuino.github.io/workCultureSurvey-fCC/" class="project survey">
-                <img src="img/survey3.png" alt="Work Culture Survey" class="project-image">
+            <a href="https://pacuino.github.io/magazine-fCC/" class="project magazine" target="_blank">
+                <img src="img/magazine2.png" alt="Magazine" class="project-image">
+                <p class="project-title">
+                    <span class="code">&lt</span>
+                    Magazine
+                    <span class="code">/&gt</span>
+                </p>
             </a>
-            <a href="https://pacuino.github.io/techDoc-fCC/" class="project techdoc">
-                <img src="img/techdoc.png" alt="Technical Documentation" class="project-image">
+            <a href="https://pacuino.github.io/aluraPlay-Alura/" class="project aluraplay" target="_blank">
+                <img src="img/aluraplaypic2.png" alt="Alura Play" class="project-image">
+                <p class="project-title">
+                    <span class="code">&lt</span>
+                    Alura Play
+                    <span class="code">/&gt</span>
+                </p>
+            </a>
+            <a href="https://pacuino.github.io/workCultureSurvey-fCC/" class="project survey" target="_blank">
+                <img src="img/survey3-2.png" alt="Work Culture Survey" class="project-image">
+                <p class="project-title">
+                    <span class="code">&lt</span>
+                    Work Culture Survey
+                    <span class="code">/&gt</span>
+                </p>
+            </a>
+            <a href="https://pacuino.github.io/techDoc-fCC/" class="project techdoc" target="_blank">
+                <img src="img/techdoc2.png" alt="Technical Documentation" class="project-image">
+                <p class="project-title">
+                    <span class="code">&lt</span>
+                    Technical Documentation
+                    <span class="code">/&gt</span>
+                </p>
             </a>
         </div>
     </section>
