--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             </div>
             <div  class="contact-form">
                 <form id="form" class="form" name="form">
-                    <div class="form-group">
+                    <div id="nombre-group" class="form-group">
                         <label for="nombre" class="form-label">Nombre</label>
                         <div class="form-group-input">
-                            <input id="username" class="form-input" type="text" name="nombre" placeholder="Nombre" required>
+                            <input id="nombre" class="form-input" type="text" name="nombre" placeholder="Nombre" required>
                             <i class='validacion-form bx bx-x-circle'></i>
                         </div>
                         <ul class="form-input-error">
@@ -145,7 +145,7 @@
                             <li class="form-input-error-item">Sin caracteres especiales</li>
                         </ul>
                     </div>
-                    <div class="form-group">
+                    <div id="email-group" class="form-group">
                         <label for="email" class="form-label">Correo Electronico</label>
                         <div class="form-group-input">
                             <input id="email" class="form-input" type="email" name="email" placeholder="e-mail" required>
@@ -156,7 +156,7 @@
                             <li class="form-input-error-item">Deber estar en formato e-mail conteniendo el caracter especial @ seguido de un dominio o proveedor seguido de un punto(.)</li>
                         </ul>
                     </div>
-                    <div class="form-group">
+                    <div id="asunto-group" class="form-group">
                         <label for="asunto" class="form-label">Asunto</label>
                         <div class="form-group-input">
                             <input id="asunto" class="form-input" type="text" name="asunto" placeholder="Asunto">
@@ -169,7 +169,7 @@
                     </div>
                     <div class="form-group">
                         <label for="mensaje" class="form-label">Mensaje</label>
-                        <div class="form-group-input">
+                        <div id="mensaje-group" class="form-group-input">
                              <textarea class="form-textarea" rows="5" cols="40" id="mensaje" name="mensaje" placeholder="Mensaje"></textarea>
                              <i class='validacion-form textareaform bx bx-x-circle'></i>
                         </div>
@@ -181,7 +181,7 @@
                     <div class="form-mensaje">
                         <p id="form-mensaje-error" class="form-mensaje-error">
                             <span><i class= 'bx bxs-error'>
-                            </i> Error</span> Rellene el formulario correctamente</p>
+                            </i>Error</span>Rellene el formulario correctamente</p>
                     </div>
                     <button id="submit" type="submit" class="submit">Enviar mensaje</button>
                     <div class="form-mensaje">
