--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Sección del Menú  -->
         <div class="menu">
             <nav id="navbar" class="nav">
-                <li class="titulo">Pacuino</li>
+                <li class="titulo">Pacuino Portafolios</li>
                 <ul class="nav_list">
                     <li class="nav_list_item"><a href="#welcome-section">Sobre mi</a></li>
                     <li class="nav_list_item"><a href="#skills">Skills</a></li>
@@ -74,7 +74,7 @@
         <h2 class="projects-title">Aqui algunos de mis proyectos</h2>
         <div class="projects-grid">
             <a href="https://pacuino.github.io/encriptadorDeTexto-Alura/" class="project project-tile" target="_blank">
-                <img src="img/encriptador2.png" alt="Encriptador de Texto" class="project-image">
+                <img src="img/morfeo.png" alt="Encriptador de Texto" class="project-image">
                 <p class="project-title">
                     <span class="code">&lt</span>
                     Encriptador de Texto
@@ -139,7 +139,7 @@
                     <div id="form-nombre" class="form-group">
                         <label for="nombre" class="form-label">Nombre</label>
                         <div class="form-group-input">
-                            <input id="nombre" class="form-input" type="text" name="nombre" placeholder="Nombre" required>
+                            <input id="nombre" class="form-input" type="text" name="nombre" placeholder="Fulano" required>
                             <i class='validacion-form fas fa-times-circle'></i>
                         </div>
                         <ul class="form-input-error">
@@ -153,7 +153,7 @@
                     <div id="form-email" class="form-group">
                         <label for="email" class="form-label">Correo Electronico</label>
                         <div class="form-group-input">
-                            <input id="email" class="form-input" type="email" name="email" placeholder="e-mail" required>
+                            <input id="email" class="form-input" type="email" name="email" placeholder="fulano@hmail.com" required>
                             <i class='validacion-form fas fa-times-circle'></i>
                         </div>
                         <ul class="form-input-error">
@@ -166,7 +166,7 @@
                     <div id="form-asunto" class="form-group">
                         <label for="asunto" class="form-label">Asunto</label>
                         <div class="form-group-input">
-                            <input id="asunto" class="form-input" type="text" name="asunto" placeholder="Asunto">
+                            <input id="asunto" class="form-input" type="text" name="asunto" placeholder="Buen dia">
                             <i class='validacion-form fas fa-times-circle'></i>
                         </div>
                         <ul class="form-input-error">
@@ -179,7 +179,7 @@
                     <div id="form-mensaje" class="form-group">
                         <label for="mensaje" class="form-label">Mensaje</label>
                         <div  class="form-group-input">
-                             <textarea class="form-textarea" rows="5" cols="40" id="mensaje" name="mensaje" placeholder="Mensaje"></textarea>
+                             <textarea class="form-textarea" rows="5" cols="40" id="mensaje" name="mensaje" placeholder="Lorem Ipsum"></textarea>
                              <i class='validacion-form textareaform fas fa-times-circle'></i>
                         </div>
                         <ul class="form-input-error">
@@ -197,7 +197,7 @@
                     
                     <!--Grupo Boton-->
                     <div class="form-boton" id="form-boton">
-                        <button id="submit" type="submit" class="submit">Enviar mensaje</button>
+                        <button id="submit" type="submit" class="submit">Enviar</button>
                         <p id="form-mensaje-exito" class="form-mensaje-exito">El formulario se envio correctamente</p>
                     </div>
                 </form>           
